@@ -131,6 +131,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #26129: Deprecated accepting non-integers in grp.getgrgid().
+
 - Issue #25850: Use cross-compilation by default for 64-bit Windows.
 
 - Issue #25822: Add docstrings to the fields of urllib.parse results.
